[package]
edition = "2021"
name = "skdb"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "cmd/skdb-server",
    "cmd/skdb-ctl",
    "cmd/skdb-test",
    "skproto",
]

[dependencies]
clap = {version = "3.0.9", features = ["derive"]}
rand = "0.8.4"
# rocksdb = "0.17.0"
tantivy = "0.16.1"
uuid = {version = "0.8", features = ["serde", "v4"]}
crossbeam-channel = "0.5.2" 
crossbeam = "0.8.1"
futures = "0.3"
tokio = { version = "1.15", features = ["rt", "rt-multi-thread", "time", "sync"] }
lazy_static = "1.4.0"
skproto = { path = "skproto" }
grpcio = { version = "0.9.0", default-features = false, features = ["secure"] }
protobuf = "=2.8.0"
tantivy-common = "0.1.0"
redis = "0.21.5"
anyhow = "1.0.56"
chrono = "0.4.19"
serde = "1.0"
serde_yaml = "0.8"
tracing = "0.1.5"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "std"] }
futures-sink = "0.3"

[dev-dependencies]
pretty_assertions = "1"