[package]
name = "skdb-ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.9", features = ["derive"]}
skdb = { path = "../.." }
futures = "0.3.5"
tokio = { version = "1.15", features = ["time"] }
skproto = { path = "../../skproto" }
grpcio = { version = "0.9.0", default-features = false, features = ["secure"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }