[package]
name = "skdb-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.9", features = ["derive"]}
skdb = { path = "../.." }
futures = "0.3.5"
tokio = { version = "1.15", features = ["time", "sync", "rt"] }
skproto = { path = "../../skproto" }
grpcio = { version = "0.9.0", default-features = false, features = ["secure"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
lazy_static = "1.4.0"
chrono = "0.4.19"
anyhow = "1.0.56"
tracing = "0.1.5"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "std"] }
uuid = {version = "0.8", features = ["serde", "v4"]}
tower = { version = "0.4", features = ["limit", "buffer", "util"] }