[package]
name = "skdb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skdb = { path = "../.." }
clap = {version = "3.0.9", features = ["derive"]}
grpcio = { version = "0.9",  default-features = true, features = ["openssl-vendored", "protobuf-codec"] }
protobuf = "2.18.2"
futures = "0.3"
tokio = { version = "1.15", features = ["rt"] }