[package]
name = "skdb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skdb = { path = "../.." }
clap = {version = "3.0.9", features = ["derive"]}
lazy_static = "1.4.0"
futures = "0.3.5"
skproto = { path = "../../skproto" }
grpcio = { version = "0.9.0", default-features = false, features = ["secure"] }
tokio = { version = "1.15", features = ["time"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }