[package]
name = "skdb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skdb = { path = "../.." }
clap = {version = "3.0.9", features = ["derive"]}
lazy_static = "1.4.0"
futures = "0.3.5"
skproto = { path = "../../skproto" }
grpcio = { version = "0.9.0", default-features = false, features = ["secure"] }
tokio = { version = "1.15", features = ["time"] }
async-trait = "0.1.52"
anyhow = "1.0.56"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
crossbeam-channel = "0.5.2" 
chrono = "0.4.19"
tantivy-common = "0.1.0"
tantivy = "0.16.1"
tantivy-query-grammar = "0.15.0"
tracing = "0.1.5"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "std"] }